# grrs

./: Cargo.toml  LICENCE.txt  README.md
src/: lib.rs  main.rs
tests/: cli.rs
