[package]
name = "grrs"
version = "0.1.0"
authors = ["Eero Häihälä <eero.haihala@vincit.fi>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/vincit-haihala/grrs"
repository = "https://github.com/vincit-haihala/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"